# python-styleguide

./: .gitignore  .instructions.md  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  poetry.toml  pyproject.toml
.github/: CODEOWNERS  renovate.json
.github/copilot/: instructions.md
.github/workflows/: Comment-on-PR.yml  Notify-Convention-Change.md  Notify-Convention-Change.yml  PR.yml  Publish-Package.yml  Update-Poetry-Lock.yml  Validate-CODEOWNERS.yml  Validate-Owners.yml
docs/: Coding-Conventions.md  Gemfile  index.md
ni_python_styleguide/: __init__.py  __main__.py  _cli.py  _config_constants.py  _fix.py  _format.py  _git_utils.py  _lint.py  config.ini  config.toml  flakehell_config.toml
ni_python_styleguide/_acknowledge_existing_errors/: __init__.py  _lint_errors_parser.py
ni_python_styleguide/_lint_errors_parser/: __init__.py
ni_python_styleguide/_utils/: __init__.py  _constants.py  code_analysis.py  diff.py  git.py  lint.py  string_helpers.py  temp_file.py
ni_python_styleguide/_vendor/: README.md
ni_python_styleguide/_vendor/flakehell/_logic/: _discover.py
ni_python_styleguide/_vendor/flakehell/_patched/: _app.py
ni_python_styleguide/_vendor/flakehell/commands/: _code.py  _missed.py  _plugins.py
ni_python_styleguide/acknowledge_existing_errors/: __init__.py
ni_python_styleguide/lint_errors_parser/: __init__.py
tests/: conftest.py  test_cli.py
tests/test_cli/: test_acknowledge_existing_errors.py  test_application_import_names.py  test_bandit.py  test_bare.py  test_fix.py  test_format.py  test_lint.py  test_lint_errors_parser.py  test_utils.py
tests/test_cli/acknowledge_existing_errors_multiple_files/input/: acknowledge_function_signatures.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/blank_file_tests/: output.py  output__aggressive.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/d103_method_missing_docstring/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/doc_line_tests/: bad_input.py  expected_output.py  output.py.txt  output__aggressive.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/e402_module_level_imports_at_top_of_file/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/e711_comparison_to_none/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/e712_comparison_to_true/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/e722_do_not_use_bare_except/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/e731_use_def_instead_of_lambda_asignment/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/e741_ambiguous_variable_name/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/f401_unused_import/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/f402_shadow_import/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/f403_do_not_use_wildcard_import/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/f405_unknown_from_wildcard/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/function_signature_tests/: expected_output.py  output.py  output.py.txt  output__aggressive.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/import_line_tests/: expected_output.py  input.py  output.py  output.py.txt  output__aggressive.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/line_continuation_tests/: input.py  output.py.txt  output__aggressive.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/n802_803_methods_and_params_with_bad_names/: bad_input.py  expected_output.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/structural_tests/: bad_input.py  expected_output.py  input.py  output.py  output.py.txt  output__aggressive.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/unicode_in_files/: input.py  output.py  output.py.txt  output__aggressive.py
tests/test_cli/acknowledge_existing_errors_test_cases__snapshots/w505_doc_line_too_long/: bad_input.py  expected_output.py
tests/test_cli/fix_test_cases__snapshots/basic_example/: input.py  output.py  output.py.txt  output__aggressive.py
tests/test_cli/fix_test_cases__snapshots/more_complicated_example/: input.py  output.py  output.py.txt  output__aggressive.py
tests/test_cli/fix_test_cases__snapshots/unicode_example/: input.py  output.py.txt  output__aggressive.py
tests/test_cli/format_test_cases__snapshots/blank_file/: output.diff
tests/test_cli/format_test_cases__snapshots/file_with_hanging_whitespace/: input.py  output.diff  output.py
tests/test_cli/format_test_cases__snapshots/file_with_malsorted_imports/: input.py  output.diff  output.py
tests/test_cli/format_test_cases__snapshots/file_with_unicode/: input.py  output.diff  output.py
tests/test_convention_doc/: codeblock_config.toml  conftest.py  doctypes.py  test_codeblocks.py  test_rules.py  test_sections.py  test_subsections.py
